--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ token.mat
 simple_emotional_classification/*.dat
 simple_emotional_classification/*.model
 simple_emotional_classification/*.dict
+
+imagenet_object_recognition/models
