使用dlib库实现简单的物体对象检测和人脸识别小项目

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ simple_emotional_classification/*.model
 simple_emotional_classification/*.dict
 
 imagenet_object_recognition/models
+
+dlib_object_detect/faces
+dlib_object_detect/stools
+dlib_object_detect/tests
+dlib_object_detect/detector.model
+dlib_object_detect/stools.model
